--- a/CONFIG
+++ b/CONFIG
@@ -2,7 +2,7 @@ ROOT = .
 
 OPTIM= -O3
 #PROF = -pg
-#DEBUG = -DDEBUG
+DEBUG = -DEBUG_NETWORKING
 GDEBUG = -g
 
 # set this to your preferred local storage directory
